{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 137,
  "lineage": "2eeb8fc1-6a1c-6bb5-12f8-e6e226bed464",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "fortigate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00694e551a1472329",
            "arn": "arn:aws:ec2:ca-central-1:994114819961:elastic-ip/eipalloc-00694e551a1472329",
            "association_id": "eipassoc-05143ad66a71294c5",
            "domain": "vpc",
            "id": "eipalloc-00694e551a1472329",
            "instance": "i-0d7aeac964c681d06",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-03b51466049b386cc",
            "private_dns": "ip-10-20-1-10.ca-central-1.compute.internal",
            "private_ip": "10.20.1.10",
            "public_dns": "ec2-15-175-115-8.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.175.115.8",
            "public_ipv4_pool": "amazon",
            "region": "ca-central-1",
            "tags": {
              "Name": "fortigate-training-eip"
            },
            "tags_all": {
              "Name": "fortigate-training-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "eipalloc-00694e551a1472329",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_instance.fortigate",
            "aws_security_group.fortigate",
            "aws_subnet.public",
            "aws_vpc.lab",
            "awscc_ec2_network_interface.port1",
            "data.aws_ami.fortigate_payg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fortigate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fb6bf31908199e50",
            "arn": "arn:aws:ec2:ca-central-1:994114819961:instance/i-0d7aeac964c681d06",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063ffc740efb5c497",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7aeac964c681d06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c6i.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-03b51466049b386cc"
              }
            ],
            "primary_network_interface_id": "eni-03b51466049b386cc",
            "private_dns": "ip-10-20-1-10.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.10",
            "region": "ca-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ca-central-1:994114819961:key/d56fb25b-4b92-4748-9429-035a65d2d0e2",
                "throughput": 125,
                "volume_id": "vol-049a5ee22447d3e6c",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-049e9c71be55a58d1",
            "tags": {
              "Name": "fortigate-training"
            },
            "tags_all": {
              "Name": "fortigate-training"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0a1710efe81ca9ede"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "i-0d7aeac964c681d06",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_security_group.fortigate",
            "aws_subnet.public",
            "aws_vpc.lab",
            "awscc_ec2_network_interface.port1",
            "data.aws_ami.fortigate_payg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0063473985e3644ec",
            "arn": "arn:aws:ec2:ca-central-1:994114819961:instance/i-010f91637556c6ba7",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": true,
            "hibernation": false,
            "id": "i-010f91637556c6ba7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "fortigate-training-windows",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "XAjJROxUbpZf47TBaeyMgoyRKbNLS6xSyRkuT2HPD0oe0bevfwPk/UOn3gmG+mdTmuY2FP0YStz5czHgFgEkKUNgS6tS4s5iRyG9j9qcuWFvnhmRw2G3riPcGAXadFCiMCtcklKaui3mf1zNMWEp/9WVkvXeRQwl+ndqot0g7UeJy+OoyxPvpCh1CAN8JFzQtmfOZSpKJV5IABayHR9wxxPUv/MuVpaZ2nmqA1+DapWG3ZrxfdW0sByZALmZkrxgdT0Kc6UAfXvaRQIGi2l0TUqTclb+8adepL0GmBo7w9x0LIR/TUz6xT4EVV/v7L3zq7GRbx6OsYzZQPPzruT7yn22mEI7lTarUIUhYngixvSZw14DhxoD8kb3rSHVJ4Svd5kTY8IfkBLoUABtKovYGTSVxz0GyXuQJSpSogz7NDrnxptN3jC1n5Odzhs4kaS9dus1Hgj34BBChVYgsIYBH6 [...]
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-010d142d1d34a2127"
              }
            ],
            "primary_network_interface_id": "eni-010d142d1d34a2127",
            "private_dns": "ip-10-20-2-20.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.2.20",
            "region": "ca-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ca-central-1:994114819961:key/d56fb25b-4b92-4748-9429-035a65d2d0e2",
                "throughput": 125,
                "volume_id": "vol-0defc832ef01c1098",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049532342548d1d44",
            "tags": {
              "Name": "fortigate-training-windows"
            },
            "tags_all": {
              "Name": "fortigate-training-windows"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f6e6002e73bb4c41"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "i-010f91637556c6ba7",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_instance.fortigate",
            "aws_key_pair.windows",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.fortigate",
            "aws_security_group.fortigate_internal",
            "aws_security_group.windows",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.lab",
            "awscc_ec2_network_interface.port1",
            "awscc_ec2_network_interface.port2",
            "awscc_ec2_network_interface_attachment.port2",
            "data.aws_ami.fortigate_payg",
            "data.aws_ami.windows",
            "tls_private_key.windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:994114819961:internet-gateway/igw-035670604fc854518",
            "id": "igw-035670604fc854518",
            "owner_id": "994114819961",
            "region": "ca-central-1",
            "tags": {
              "Name": "fortigate-training-igw"
            },
            "tags_all": {
              "Name": "fortigate-training-igw"
            },
            "vpc_id": "vpc-0ec507ac135dd4b22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "igw-035670604fc854518",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:994114819961:route-table/rtb-0d1d67f58e7509f85",
            "id": "rtb-0d1d67f58e7509f85",
            "owner_id": "994114819961",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0d0f1486a8af8c592",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fortigate-training-private"
            },
            "tags_all": {
              "Name": "fortigate-training-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec507ac135dd4b22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "rtb-0d1d67f58e7509f85",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_instance.fortigate",
            "aws_security_group.fortigate",
            "aws_security_group.fortigate_internal",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.lab",
            "awscc_ec2_network_interface.port1",
            "awscc_ec2_network_interface.port2",
            "awscc_ec2_network_interface_attachment.port2",
            "data.aws_ami.fortigate_payg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:994114819961:route-table/rtb-03dae58a9f3c5dab9",
            "id": "rtb-03dae58a9f3c5dab9",
            "owner_id": "994114819961",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035670604fc854518",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fortigate-training-public"
            },
            "tags_all": {
              "Name": "fortigate-training-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec507ac135dd4b22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "rtb-03dae58a9f3c5dab9",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.lab",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e828069de4233d55",
            "region": "ca-central-1",
            "route_table_id": "rtb-0d1d67f58e7509f85",
            "subnet_id": "subnet-049532342548d1d44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "rtbassoc-0e828069de4233d55",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_instance.fortigate",
            "aws_route_table.private",
            "aws_security_group.fortigate",
            "aws_security_group.fortigate_internal",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.lab",
            "awscc_ec2_network_interface.port1",
            "awscc_ec2_network_interface.port2",
            "awscc_ec2_network_interface_attachment.port2",
            "data.aws_ami.fortigate_payg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09841b7a200d9a503",
            "region": "ca-central-1",
            "route_table_id": "rtb-03dae58a9f3c5dab9",
            "subnet_id": "subnet-049e9c71be55a58d1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "rtbassoc-09841b7a200d9a503",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.lab",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fortigate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:994114819961:security-group/sg-0a1710efe81ca9ede",
            "description": "Restricted FortiGate training management access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow FortiGate outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1710efe81ca9ede",
            "ingress": [
              {
                "cidr_blocks": [
                  "24.157.117.33/32"
                ],
                "description": "FortiGate HTTPS management",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "24.157.117.33/32"
                ],
                "description": "FortiGate SSH management",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "24.157.117.33/32"
                ],
                "description": "RDP forwarded through FortiGate",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "fortigate-training-management",
            "name_prefix": "",
            "owner_id": "994114819961",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fortigate-training-management"
            },
            "tags_all": {
              "Name": "fortigate-training-management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec507ac135dd4b22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "sg-0a1710efe81ca9ede",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fortigate_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:994114819961:security-group/sg-03b9d9727e9847838",
            "description": "Traffic from the private training subnet to FortiGate port2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow FortiGate outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b9d9727e9847838",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.2.0/24"
                ],
                "description": "Private subnet traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fortigate-training-internal",
            "name_prefix": "",
            "owner_id": "994114819961",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fortigate-training-internal"
            },
            "tags_all": {
              "Name": "fortigate-training-internal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec507ac135dd4b22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "sg-03b9d9727e9847838",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:994114819961:security-group/sg-0f6e6002e73bb4c41",
            "description": "Windows desktop access through the FortiGate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Windows outbound access through FortiGate",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6e6002e73bb4c41",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.2.10/32"
                ],
                "description": "RDP from FortiGate port2 after source NAT",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "fortigate-training-windows",
            "name_prefix": "",
            "owner_id": "994114819961",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fortigate-training-windows"
            },
            "tags_all": {
              "Name": "fortigate-training-windows"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec507ac135dd4b22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "sg-0f6e6002e73bb4c41",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:994114819961:subnet/subnet-049532342548d1d44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049532342548d1d44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "994114819961",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "fortigate-training-private"
            },
            "tags_all": {
              "Name": "fortigate-training-private"
            },
            "vpc_id": "vpc-0ec507ac135dd4b22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "subnet-049532342548d1d44",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:994114819961:subnet/subnet-049e9c71be55a58d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049e9c71be55a58d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "994114819961",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "fortigate-training-public"
            },
            "tags_all": {
              "Name": "fortigate-training-public"
            },
            "vpc_id": "vpc-0ec507ac135dd4b22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "subnet-049e9c71be55a58d1",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:994114819961:vpc/vpc-0ec507ac135dd4b22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-045e329cd57a73378",
            "default_route_table_id": "rtb-06fc3484bebe45c7a",
            "default_security_group_id": "sg-0ff5e6fb5c6d6a486",
            "dhcp_options_id": "dopt-0300be01324f33a80",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec507ac135dd4b22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06fc3484bebe45c7a",
            "owner_id": "994114819961",
            "region": "ca-central-1",
            "tags": {
              "Name": "fortigate-training-vpc"
            },
            "tags_all": {
              "Name": "fortigate-training-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "994114819961",
            "id": "vpc-0ec507ac135dd4b22",
            "region": "ca-central-1"
          }
        }
      ]
    }
  ]
}